# awrisan

./: .gitignore  BUSINESS-CONCEPT.md  Cargo.toml  DEPLOYMENTS.md  LICENSE  README.md  SUBMISSION.md
.github/workflows/: soroban.yml
.stellar/: awrisan-runtime.json  rooms.json
app/: .gitignore  AGENTS.md  capacitor.config.json  design-qa.md  index.html  package-lock.json  package.json  vercel.json  vite.config.mjs
app/android/app/: build.gradle
app/design/audit-mobile-2026-07-15/: 02-android-landing-scroll-1.xml  03-android-landing-scroll-2.xml  04-android-culture-entry.xml  07-android-dashboard.xml  17-android-signin.xml  18-android-onboarding-1-summary.txt  19-android-onboarding-2-summary.txt  19-android-onboarding-2.xml  21-android-onboarding-3-summary.txt  21-android-onboarding-3.xml  24-android-root-current-late.xml  28-android-consent-checked-current.xml  29-android-consent-button-current.xml  30-android-state-after-sequence-summary.txt  (+17 more)
app/server/: bootstrap-testnet.mjs  contract-errors.mjs  contract-errors.test.mjs  stellar-cli.mjs  stellar-cli.test.mjs  testnet-gateway.mjs
app/src/: App.jsx  App.test.jsx  appages-deletion.test.jsx  chain-stub.js  chainboard-citations.test.js  chainview.test.jsx  demo-state.jsx  demo-state.test.jsx  deployed-wires.test.js  field-contract.test.js  gateway-path.test.jsx  main.jsx  netguard.test.js  routing.test.jsx  stellar-client.js  stellar-client.test.js  stellar-rpc.js  stellar-rpc.test.js  styles.css  test-setup.js  ui.jsx
contracts/arisan_rooms/: Cargo.toml  README.md
contracts/arisan_rooms/src/: lib.rs  test.rs
(+10 files in other folders)
